package com.sunrise.clinic.domain;

/** Notification delivery channel (Factory Method product family). */
public enum ChannelType {
    EMAIL,
    SMS
}
