@startuml class_diagram
' Sunrise Dental Clinic - Domain Class Diagram
' Pure-Java Smetana layout (no Graphviz dependency)
!pragma layout smetana
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #F4F9FF
  BorderColor #2C6EBB
  ArrowColor #34495E
}
title Sunrise Dental Clinic - Domain Class Diagram\n(access modifiers, multiplicity, aggregation, composition)

' ===================== Enumerations =====================
enum Role {
  PATIENT
  RECEPTIONIST
  DENTIST
  ADMIN
}
enum AppointmentStatus {
  CONFIRMED
  COMPLETED
  BILLED
  CANCELLED
}
enum SlotStatus {
  OPEN
  BOOKED
}
enum ChannelType {
  EMAIL
  SMS
}
enum NotificationStatus {
  SENT
  FAILED
  LOGGED
}

' ===================== Aggregate root of the organisation =====================
class Clinic {
  - id : String
  - name : String
  - city : String
  + registerDentist(d : Dentist) : void
  + registerStaff(u : UserAccount) : void
}

' ===================== Identity & people =====================
class UserAccount {
  - uid : String
  - email : String
  - displayName : String
  - role : Role
  - active : boolean
  - failedAttempts : int
  - locked : boolean
  + isLocked() : boolean
  + recordFailedLogin() : void
  + resetFailedLogins() : void
}

class Patient {
  - id : String
  - userUid : String
  - name : String
  - address : String
  - contactNumber : String
  - email : String
  - dob : LocalDate
  + calculateAge() : int
}

class Dentist {
  - id : String
  - userUid : String
  - name : String
  - specialization : String
  - consultationFee : double
  - active : boolean
  + getConsultationFee() : double
}

' ===================== Scheduling =====================
class DentistSession {
  - id : String
  - dentistId : String
  - date : LocalDate
  - startTime : LocalTime
  - endTime : LocalTime
  - slotDurationMinutes : int
  + explodeIntoSlots() : List<Slot>
}

class Slot {
  - id : String
  - sessionId : String
  - dentistId : String
  - date : LocalDate
  - startTime : LocalTime
  - durationMinutes : int
  - status : SlotStatus
  - appointmentNo : String
  + isBookable() : boolean
  + book(appointmentNo : String) : void
}

' ===================== Catalogue =====================
class Treatment {
  - id : String
  - name : String
  - description : String
  - baseCost : double
  - active : boolean
  + getBaseCost() : double
}

' ===================== Core aggregate =====================
class Appointment {
  - appointmentNo : String
  - patientId : String
  - dentistId : String
  - slotId : String
  - treatmentId : String
  - date : LocalDate
  - time : LocalTime
  - status : AppointmentStatus
  - diagnosis : String  {confidential: dentist + patient only}
  - createdByUid : String
  - createdByRole : Role
  + markCompleted(diagnosis : String) : void
  + cancel() : void
  + isBillable() : boolean
}

class Bill {
  - id : String
  - appointmentNo : String
  - consultationFee : double
  - treatmentCost : double
  - serviceCharge : double
  - discount : double
  - tax : double
  - total : double
  - dentistEarning : double
  - clinicEarning : double
  - receptionistEarning : double
  + getTotal() : double
}

class Notification {
  - id : String
  - appointmentNo : String
  - channel : ChannelType
  - recipient : String
  - subject : String
  - body : String
  - status : NotificationStatus
  - sentAt : Instant
}

class AuditEvent {
  - id : String
  - actorUid : String
  - actorRole : Role
  - action : String
  - targetType : String
  - targetId : String
  - timestamp : Instant
}

class AiSettings {
  - id : String
  - provider : String
  - model : String
  - temperature : double
  - enabled : boolean
  - updatedByUid : String
  + isEnabled() : boolean
}

' ===================== Relationships =====================
' -- Aggregation (o--): parts exist independently of the whole --
Clinic o-- "*" Dentist : employs >
Clinic o-- "*" UserAccount : has staff >

' -- Association with navigability --
UserAccount "1" -- "0..1" Patient : profile
UserAccount "1" -- "0..1" Dentist : profile

' -- Composition (*--): parts die with the whole --
Dentist "1" *-- "*" DentistSession : publishes >
DentistSession "1" *-- "*" Slot : contains >

' -- Booking associations (navigable) --
Patient "1" --> "*" Appointment : books >
Dentist "1" --> "*" Appointment : treats >
Slot "1" -- "0..1" Appointment : reserved by
Treatment "1" --> "*" Appointment : applied in >

' -- Composition: a Bill / Notifications cannot exist without their Appointment --
Appointment "1" *-- "0..1" Bill : produces >
Appointment "1" *-- "*" Notification : triggers >

' -- Dependencies on enums --
UserAccount ..> Role
Appointment ..> AppointmentStatus
Slot ..> SlotStatus
Notification ..> ChannelType
Notification ..> NotificationStatus
AuditEvent ..> Role

@enduml
